--- a/Ejercicio-6/Makefile
+++ b/Ejercicio-6/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CCFLAGS = -Wall -Werror -Wextra -pedantic -std=c99 
-LDFLAGS =  -fopenmp -O2
+LDFLAGS =  -fopenmp -O2 -std=c99
 
 SRC = ejercicio6.c
 OBJ = $(SRC:.cc=.o)
